src/chassis/build/log/idf_py_stdout_output_668204
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/issaimaru/esp/2025-SSR-Team5/Firmware/src/chassis/build/bootloader/esp-idf/esptool_py && /home/issaimaru/.espressif/python_env/idf5.4_py3.12_env/bin/python /home/issaimaru/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/issaimaru/esp/2025-SSR-Team5/Firmware/src/chassis/build/bootloader/bootloader.bin
Bootloader binary size 0x5220 bytes. 0x2de0 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/chassis.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/chassis.cpp.obj 
/home/issaimaru/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.4.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/issaimaru/esp/2025-SSR-Team5/Firmware/src/chassis/build/config -I/home/issaimaru/esp/2025-SSR-Team5/Firmware/src/chassis/main -I/home/issaimaru/esp/2025-SSR-Team5/Firmware/components/Chassis/src -I/home/issaimaru/esp/esp-idf/components/newlib/platform_include -I/home/issaimaru/esp/esp-idf/components/freertos/config/include -I/home/issaimaru/esp/esp-idf/components/freertos/config/include/freertos -I/home/issaimaru/esp/esp-idf/components/freertos/config/xtensa/include -I/home/issaimaru/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/issaimaru/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/issaimaru/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/issaimaru/esp/esp-idf/components/freertos/esp_additions/include -I/home/issaimaru/esp/esp-idf/components/esp_hw_support/include -I/home/issaimaru/esp/esp-idf/components/esp_hw_support/include/soc -I/home/issaimaru/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/issaimaru/esp/esp-idf/components/esp_hw_support/dma/include -I/home/issaimaru/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/issaimaru/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/issaimaru/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/issaimaru/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/issaimaru/esp/esp-idf/components/heap/include -I/home/issaimaru/esp/esp-idf/components/heap/tlsf -I/home/issaimaru/esp/esp-idf/components/log/include -I/home/issaimaru/esp/esp-idf/components/soc/include -I/home/issaimaru/esp/esp-idf/components/soc/esp32s3 -I/home/issaimaru/esp/esp-idf/components/soc/esp32s3/include -I/home/issaimaru/esp/esp-idf/components/soc/esp32s3/register -I/home/issaimaru/esp/esp-idf/components/hal/platform_port/include -I/home/issaimaru/esp/esp-idf/components/hal/esp32s3/include -I/home/issaimaru/esp/esp-idf/components/hal/include -I/home/issaimaru/esp/esp-idf/components/esp_rom/include -I/home/issaimaru/esp/esp-idf/components/esp_rom/esp32s3/include -I/home/issaimaru/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/home/issaimaru/esp/esp-idf/components/esp_rom/esp32s3 -I/home/issaimaru/esp/esp-idf/components/esp_common/include -I/home/issaimaru/esp/esp-idf/components/esp_system/include -I/home/issaimaru/esp/esp-idf/components/esp_system/port/soc -I/home/issaimaru/esp/esp-idf/components/esp_system/port/include/private -I/home/issaimaru/esp/esp-idf/components/xtensa/esp32s3/include -I/home/issaimaru/esp/esp-idf/components/xtensa/include -I/home/issaimaru/esp/esp-idf/components/xtensa/deprecated_include -I/home/issaimaru/esp/esp-idf/components/lwip/include -I/home/issaimaru/esp/esp-idf/components/lwip/include/apps -I/home/issaimaru/esp/esp-idf/components/lwip/include/apps/sntp -I/home/issaimaru/esp/esp-idf/components/lwip/lwip/src/include -I/home/issaimaru/esp/esp-idf/components/lwip/port/include -I/home/issaimaru/esp/esp-idf/components/lwip/port/freertos/include -I/home/issaimaru/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/issaimaru/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/issaimaru/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/issaimaru/esp/esp-idf/components/esp_driver_gpio/include -I/home/issaimaru/esp/esp-idf/components/esp_driver_ledc/include -I/home/issaimaru/esp/2025-SSR-Team5/Firmware/src/chassis/managed_components/espressif__bdc_motor/include -I/home/issaimaru/esp/2025-SSR-Team5/Firmware/src/chassis/managed_components/espressif__bdc_motor/interface -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/issaimaru/esp/2025-SSR-Team5/Firmware/src/chassis=. -fmacro-prefix-map=/home/issaimaru/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -fuse-cxa-atexit -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/chassis.cpp.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/chassis.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/chassis.cpp.obj -c /home/issaimaru/esp/2025-SSR-Team5/Firmware/src/chassis/main/chassis.cpp
/home/issaimaru/esp/2025-SSR-Team5/Firmware/src/chassis/main/chassis.cpp: In function 'void app_main()':
/home/issaimaru/esp/2025-SSR-Team5/Firmware/src/chassis/main/chassis.cpp:40:17: error: format '%f' expects argument of type 'float*', but argument 2 has type 'double' [-Werror=format=]
   40 |         scanf("%f %f %f",x,y,z);
      |                ~^        ~
      |                 |        |
      |                 float*   double
/home/issaimaru/esp/2025-SSR-Team5/Firmware/src/chassis/main/chassis.cpp:40:20: error: format '%f' expects argument of type 'float*', but argument 3 has type 'double' [-Werror=format=]
   40 |         scanf("%f %f %f",x,y,z);
      |                   ~^       ~
      |                    |       |
      |                    float*  double
/home/issaimaru/esp/2025-SSR-Team5/Firmware/src/chassis/main/chassis.cpp:40:23: error: format '%f' expects argument of type 'float*', but argument 4 has type 'double' [-Werror=format=]
   40 |         scanf("%f %f %f",x,y,z);
      |                      ~^      ~
      |                       |      |
      |                       float* double
/home/issaimaru/esp/2025-SSR-Team5/Firmware/src/chassis/main/chassis.cpp:40:14: error: 'x' is used uninitialized [-Werror=uninitialized]
   40 |         scanf("%f %f %f",x,y,z);
      |         ~~~~~^~~~~~~~~~~~~~~~~~
/home/issaimaru/esp/2025-SSR-Team5/Firmware/src/chassis/main/chassis.cpp:38:15: note: 'x' was declared here
   38 |         float x,y,z;
      |               ^
/home/issaimaru/esp/2025-SSR-Team5/Firmware/src/chassis/main/chassis.cpp:40:14: error: 'y' is used uninitialized [-Werror=uninitialized]
   40 |         scanf("%f %f %f",x,y,z);
      |         ~~~~~^~~~~~~~~~~~~~~~~~
/home/issaimaru/esp/2025-SSR-Team5/Firmware/src/chassis/main/chassis.cpp:38:17: note: 'y' was declared here
   38 |         float x,y,z;
      |                 ^
/home/issaimaru/esp/2025-SSR-Team5/Firmware/src/chassis/main/chassis.cpp:40:14: error: 'z' is used uninitialized [-Werror=uninitialized]
   40 |         scanf("%f %f %f",x,y,z);
      |         ~~~~~^~~~~~~~~~~~~~~~~~
/home/issaimaru/esp/2025-SSR-Team5/Firmware/src/chassis/main/chassis.cpp:38:19: note: 'z' was declared here
   38 |         float x,y,z;
      |                   ^
cc1plus: some warnings being treated as errors
ninja: build stopped: subcommand failed.
